[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "resiliencemap"
version = "0.3.0"
description = "Open-source US disaster risk intelligence platform — FEMA, USGS, NOAA & Census data"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Henok Haile" }]
requires-python = ">=3.11"
keywords = [
  "disaster", "resilience", "geospatial", "gis", "infrastructure",
  "early-warning", "fema", "usgs", "noaa", "census", "postgis", "fastapi"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://henok256.github.io/resiliencemap"
Repository = "https://github.com/henok256/resiliencemap"
Documentation = "https://github.com/henok256/resiliencemap/blob/main/docs/methodology.md"
"Bug Tracker" = "https://github.com/henok256/resiliencemap/issues"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database
    "sqlalchemy>=2.0.0",
    "geoalchemy2>=0.15.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    # Geospatial
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "fiona>=1.9.0",
    # Data handling
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # Scheduling
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov=ingestion --cov=processing --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
